# cmake-example

./: CMakeLists.txt
libs/lib1/src/: lib1.c
libs/lib2/: CMakeLists.txt
libs/lib2/src/: lib1.c
src/: test.c
